# teamspeak-clone

./: .gitignore  README.md  electron-builder.yml  file.txt  package.json
src/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.cpp  voip.cpp  voip.h
